<resources>
    <string name="app_name">Inventory</string>
    <string name="tvSignIn">Iniciar Sesion</string>
    <string name="tvUser">Nombre de usuario / Correo electronico</string>
    <string name="tvPassword">Contraseña</string>
    <string name="cbRemember">Recordar Usuario</string>
    <string name="tvSignUp"><u>Registrarse</u></string>
    <string name="btnGoogleSign">Google</string>
    <string name="btnFacebookSign">Iniciar Sesion con Facebook</string>
    <string name="btnSignUp"><u>Registrarse</u></string>
    <string name="tvName">Nombre</string>
    <string name="tvCreationDate">Fecha de creación</string>
    <string name="tvDescription">Descripción</string>
    <string name="btnChange">Cambiar Estado</string>
    <string name="tvNotas">Notas</string>
    <string name="tvUrl">Url</string>
    <string name="tvF_compra">F. Compra</string>
    <string name="tvPrecio">Precio</string>
    <string name="tvTipo">Tipo</string>
    <string name="tvSubcategoria">Subcategoria</string>
    <string name="tvCategoria">Categoria</string>
    <string name="tvModelo">Modelo</string>
    <string name="tvVendedor">Vendedor</string>
    <string name="tvSerial">Serial</string>
    <string name="enabled">Activado</string>
    <string name="tvSectorDefault">Sector por defecto</string>
    <string name="menu_save">Guardar</string>
    <string name="pref_category">Preferencias Generales</string>
    <string name="titNumColum">Número de columnas</string>
    <string name="action_account_settings">Ajustes de Cuenta</string>
    <string name="action_general_settings">Ajustes Generales</string>
    <string name="errorUserEmpty">El usuario no puede ser vacio.</string>
    <string name="errorPasswordEmpty">El password no puede ser vacio.</string>
    <string name="errorPassword">El usuario o la contraseña no son correctos.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
