<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inventory.InventoryActivity"
    android:stretchColumns="1">
    <TableRow>
        <TextView android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tvName" />

            <EditText android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="LabelFor" />
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tvSignUp"/>

        <EditText android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="LabelFor" />
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/tvCreationDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tvCreationDate"/>

        <EditText android:id="@+id/etCreationDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="LabelFor" />
    </TableRow>

    <TableRow>
            <Button
                android:id="@+id/btnChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnChange"
                android:layout_gravity="center"
                android:layout_span="2"
                />
    </TableRow>
</TableLayout>
