<?xml version="1.0" encoding="utf-8"?>
<!--
    Dudas:
    1- No se si a la imagen del producto hay que ponerle un ratio o definirle
    un ancho y alto. Lo he hecho asi para usar el ratio, ya que lo dimos en clase.

    2- Falta por crear o establecer los estilos de los edittext y de los spinner.

    3- No se el alto que hay que darle a los edittext de descripcion y notas.

    4- No se si hay que rellenar los spinner.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inventory.ProductActivity"
    android:background="@color/colorPrimaryLogin">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etDescripcionProducto"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrierET"
        app:layout_constraintTop_toBottomOf="@+id/spTipoProducto" />

    <EditText
        android:id="@+id/etNotasProducto"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvNotasProducto" />

    <Spinner
        android:id="@+id/spCategoriaProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrierET"
        app:layout_constraintTop_toTopOf="@+id/tvCategoriaProducto" />

    <Spinner
        android:id="@+id/spTipoProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrierET"
        app:layout_constraintTop_toTopOf="@+id/tvTipoProducto" />

    <Spinner
        android:id="@+id/spSubcategoriaProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrierET"
        app:layout_constraintTop_toTopOf="@+id/tvSubcategoriaProducto" />

    <EditText
        android:id="@+id/etNombreProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNombreProducto"
        app:layout_constraintEnd_toStartOf="@+id/barrierQR"
        app:layout_constraintStart_toEndOf="@+id/barrierET" />

    <EditText
        android:id="@+id/etSerialProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvSerialProducto"
        app:layout_constraintEnd_toStartOf="@+id/barrierQR"
        app:layout_constraintStart_toEndOf="@+id/barrierET" />

    <EditText
        android:id="@+id/etVendedorProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvVendedorProducto"
        app:layout_constraintEnd_toStartOf="@+id/barrierQR"
        app:layout_constraintStart_toEndOf="@+id/barrierET" />

    <EditText
        android:id="@+id/etModeloProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvModeloProducto"
        app:layout_constraintEnd_toStartOf="@+id/barrierQR"
        app:layout_constraintStart_toEndOf="@+id/barrierET" />

    <EditText
        android:id="@+id/etPrecioProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrierET"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcionProducto" />

    <EditText
        android:id="@+id/etFechaCompraProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrierET"
        app:layout_constraintTop_toBottomOf="@+id/etPrecioProducto" />

    <EditText
        android:id="@+id/etUrlProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUrlProducto"
        app:layout_constraintTop_toBottomOf="@+id/etFechaCompraProducto" />

    <ImageView
        android:id="@+id/ivImagenProducto"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/monitor"
        app:layout_constraintDimensionRatio="w,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivQrProducto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/monitor"
        app:layout_constraintDimensionRatio="w,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/etSerialProducto"
        app:layout_constraintTop_toTopOf="@+id/etSerialProducto" />

    <TextView
        android:id="@+id/tvNombreProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvName"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ivImagenProducto" />

    <TextView
        android:id="@+id/tvNotasProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvNotas"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etUrlProducto" />

    <TextView
        android:id="@+id/tvUrlProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvUrl"
        app:layout_constraintBaseline_toBaselineOf="@+id/etUrlProducto"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvFechaCompraProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvF_compra"
        app:layout_constraintBaseline_toBaselineOf="@+id/etFechaCompraProducto"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvPrecioProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPrecio"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPrecioProducto"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvDescripcionProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDescription"
        app:layout_constraintBaseline_toBaselineOf="@+id/etDescripcionProducto"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvTipoProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvTipo"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvSubcategoriaProducto" />

    <TextView
        android:id="@+id/tvSubcategoriaProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvSubcategoria"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoriaProducto" />

    <TextView
        android:id="@+id/tvCategoriaProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvCategoria"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvModeloProducto" />

    <TextView
        android:id="@+id/tvModeloProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvModelo"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvVendedorProducto" />

    <TextView
        android:id="@+id/tvVendedorProducto"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvVendedor"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvSerialProducto" />

    <TextView
        android:id="@+id/tvSerialProducto"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvSerial"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreProducto" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Barrier
        android:id="@+id/barrierET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tvTipoProducto,tvNotasProducto,tvSubcategoriaProducto,tvCategoriaProducto,tvFechaCompraProducto,tvNombreProducto,tvUrlProducto,tvDescripcionProducto,tvModeloProducto,tvPrecioProducto,tvVendedorProducto,tvSerialProducto,editText2"
        />

    <android.support.constraint.Barrier
        android:id="@+id/barrierQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="ivQrProducto" />
</android.support.constraint.ConstraintLayout>
</ScrollView>
